--- a/1/index.html
+++ b/1/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" />
-<script src="http://code.jquery.com/jquery-1.5.min.js"></script>
-	
-<script src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
-<script src="http://jquery.ibm.navitend.com/utils.js"></script>
+	<link rel="stylesheet" href="../js/jquery.mobile-1.4.5.min.css" />
+	<script src="../js/jquery-1.12.4.min.js"></script>
+	<script src="../js/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
 <div  data-role="page">
