tukar pautan jqm yang baru

--- a/2/index.html
+++ b/2/index.html
@@ -2,35 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>List View</title>
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" />
-	<script src="http://code.jquery.com/jquery-1.5.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
-	<script src="http://jquery.ibm.navitend.com/utils.js"></script>
+<title>Senarai</title>
+	<link rel="stylesheet" href="../js/jquery.mobile-1.4.5.min.css" />
+	<script src="../js/jquery-1.12.4.min.js"></script>
+	<script src="../js/jquery.mobile-1.4.5.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 <div data-role="page" data-theme="a">
-<div data-role="header">
-<h1 align="center">Menggunakan Form Input</h1>
-<div data-role="navbar">
-  <ul>
-   <li><a href="FormInput.php" data-role="button" data-inline="true" data-transition="pop">Input Data</a></li>
-   <li><a href="ListMahasiswa.php">List Mahasiswa</a></li>
-   
-  </ul>
- </div>
-</div>
-<div data-role="content">
-<li data-role="fieldcontain">
-          <center><label for="name"><h1>APLIKASI CRUD DATABASE DENGAN JQUERY MOBILE</h1>
-           <h2>OLEH : AGAN ISLAH</h2></label></center>
-   </li>
-
-</div>
-<div data-role="footer" data-position="fixed">
-<h2>@Agan Islah</h2>
-</div>
+	<div data-role="header">
+		<h1 align="center">Menggunakan Form Input</h1>
+		<div data-role="navbar">
+			<ul>
+				<li><a href="FormInput.php" data-role="button" data-inline="true" data-transition="pop">Input Data</a></li>
+				<li><a href="ListMahasiswa.php">List Mahasiswa</a></li>
+			</ul>
+		</div>
+	</div>
+	<div data-role="content">
+		<li data-role="fieldcontain">
+			<center><label for="name"><h1>APLIKASI CRUD DATABASE DENGAN JQUERY MOBILE</h1>
+			<h2>OLEH : AGAN ISLAH</h2></label></center>
+	   </li>
+	</div>
+	<div data-role="footer" data-position="fixed">
+		<h2>@Agan Islah</h2>
+	</div>
 </div>
 </body>
 </html>
