--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8" />
 <title>mvc-mobile</title>
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" />
-<script src="http://code.jquery.com/jquery-1.5.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="../js/jquery.mobile-1.4.5.min.css" />
+	<script src="../js/jquery-1.12.4.min.js"></script>
+	<script src="../js/jquery.mobile-1.4.5.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 <div data-role="page" data-theme="b">
