--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <title>mvc-mobile</title>
-	<link rel="stylesheet" href="../js/jquery.mobile-1.4.5.min.css" />
-	<script src="../js/jquery-1.12.4.min.js"></script>
-	<script src="../js/jquery.mobile-1.4.5.min.js"></script>
+	<link rel="stylesheet" href="js/jquery.mobile-1.4.5.min.css" />
+	<script src="js/jquery-1.12.4.min.js"></script>
+	<script src="js/jquery.mobile-1.4.5.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
